--- a/src/app/input-comment/input-comment.component.html
+++ b/src/app/input-comment/input-comment.component.html
@@ -1,6 +1,5 @@
-<div>
 <form (ngSubmit)="addNewPost()">
   <textarea type="text" placeholder="Escribe tu mensaje" [(ngModel)]="post.commit" name="post"></textarea>
-  <button type="submit">Enviar comentario</button>
+  <button type="submit" class="btn">Enviar comentario</button>
 </form>
-</div>
+
